# voice_vox_gui

./: Cargo.toml  sample.vvproj  unnamed  unnamed.vvproj
.github/workflows/: rust-clippy.yml  rust.yml
voice_vox/: Cargo.toml
voice_vox/src/: bottom_pane.rs  chara_change_button.rs  commands.rs  dialogue.rs  history.rs  main.rs  project.rs  save_operation.rs  tool_bar.rs
voice_vox_api/: Cargo.toml  README.md
voice_vox_api/src/: api.rs  api_schema.rs  lib.rs  reqwest_api.rs  surf_api.rs
voice_vox_iced_gui/: Cargo.toml
voice_vox_iced_gui/src/: action_bar_message.rs  character_change_button.rs  character_change_dropdown_menu.rs  history.rs  keyconfig.rs  main.rs  main_page.rs  menu_with_icon.rs  project.rs  toolbar.rs
