[package]
name = "voice_vox"
version = "0.1.0"
edition = "2021"
description = "voicevox gui implementation in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default=["preset"]
preset=[]
[dependencies]
#async-trait="0.1"
eframe =  "0.20"
egui_extras ={ version = "0.20.0",features = ["image"] }
image = { version = "0.24", features = ["png"] }
log = "0.4"
once_cell = "1"


serde ={ version = "1", features = ["derive"] }
serde_json = "1"

uuid={version="1",features=["v4"]}
voice_vox_api={path="../voice_vox_api"}
rfd={version="0.10",features=["file-handle-inner"]}
[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen="0.2"
wasm-bindgen-futures="0.4"
console_log="0.2"
web-sys={version="0.3",features=["Window","Document","HtmlAnchorElement","Url","Blob"]}
js-sys={version="0.3"}

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
tokio = { version = "1", features = ["once_cell","net","time","test-util","rt-multi-thread","macros"] }
simple-log = "1"
rodio ="0.16"
pollster ="0.2"