[package]
name = "voice_vox_api"
version = "0.13.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
description ="VoiceVox Engine openapi rust binding."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait="0.1"
base64 = "0.13"
once_cell = "1"
reqwest ={ version = "0.11", features = ["serde_json","json"] }
serde ={ version = "1", features = ["derive"] }
[dev-dependencies]
tokio = { version = "1", features = ["macros"] }