[package]
name = "voice_vox_api"
version = "0.13.3"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
description ="VoiceVox Engine openapi rust binding."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["backend_reqwest"]
backend_surf=["surf"]
backend_reqwest=["reqwest"]
[dependencies]
async-trait="0.1"
base64 = "0.21"
once_cell = "1"
reqwest ={ version = "0.11", features = ["serde_json","json"],optional = true }
surf={version =  "2",optional = true}
serde ={ version = "1", features = ["derive"] }
[dev-dependencies]
tokio = { version = "1", features = ["macros"] }