[package]
name = "voice_vox_api"
version = "0.13.4"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
description ="VoiceVox Engine openapi rust binding."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
backend_surf=["surf"]
backend_reqwest=["reqwest"]
[dependencies]
base64 = "0.21"
once_cell = "1"
serde ={ version = "1", features = ["derive"] }
reqwest ={ version = "0.11", features = ["serde_json","json"],optional = true }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surf={version =  "2",optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
surf={version =  "2",features = ["wasm-client"],optional = true}