[package]
name = "voice_vox_iced_gui"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced={git="https://github.com/t18b219k/iced.git",branch="master"}
iced_native={git="https://github.com/t18b219k/iced.git",branch="master"}
voice_vox_api="0.13.3"
serde="1"
serde_json="1"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"
