[package]
name = "voice_vox_iced_gui"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/t18b219k/iced.git", version = "0.8.0", features = [
    "image",
] }
iced_graphics = { git = "https://github.com/t18b219k/iced.git", version = "0.7.0" }
iced_wgpu = { git = "https://github.com/t18b219k/iced.git" }
iced_native = { git = "https://github.com/t18b219k/iced.git" }
iced_aw = { git = "https://github.com/t18b219k/iced_aw.git", branch = "main", features = [
    "tabs",
    "menu",
] }

voice_vox_api = { path = "../voice_vox_api", features = ["backend_surf"] }
serde = "1"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
rfd = "0.11"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = { version = "1" }
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"
